plugins {
    id 'edu.sc.seis.launch4j' version '2.3.0'
}

apply plugin: 'java'
apply plugin: 'application'

applicationName = 'TracInstant'
mainClassName = "net.bettyluke.tracinstant.TracInstantApp"
version = '0.1.0'

sourceCompatibility = 1.8
targetCompatibility = 1.8

// For 'application' plugin:
applicationDefaultJvmArgs = [
    "-Xms8M",
    "-Xmx300M",
    "-Dsun.java2d.d3d=false",
    "-Xverify:none",
    "-XX:StringTableSize=60013"
]

repositories {
    // Alternatively: mavenCentral()
    jcenter()
}

// For runnable .jar:
task fatJar(type: Jar) {

    // Simple "fatJar" configuration...
    baseName = project.name + '-all'
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar

    manifest {
        attributes 'Main-Class': mainClassName

// Alternatively: configure class-path if not building a "fatJar".
//    attributes 'Class-Path': configurations.compile.collect {
//     'libs/' + it.getName()
//    }.join(' ')

    }
}

launch4j {
    mainClassName = mainClassName
    jar = '../libs/' + project.tasks['fatJar'].archiveName

    icon = '../../icons/TracSlurp.ico'
    jreRuntimeBits = "32/64"
    jvmOptions = applicationDefaultJvmArgs
}

dependencies {

	compile 'au.com.bytecode:opencsv:2.4'

	// TODO: Would surely help code quality. Find out how to compact with proguard or something.
	// compile 'com.google.guava', version: '21.0'

    testCompile 'junit:junit:4.12+'
}

